# picoscope

doc/: FINDME.txt
project/: CMakeLists.txt  Makefile  Makefile.mingw  make.bat  toolchain-i386-mingw32.cmake  toolchain-i686-w64-mingw32.cmake
project/include/: picoStatus.h  ps4000Api.h  ps6000Api.h
project/src/: args.cpp  args.h  channel.cpp  channel.h  empty.cpp  empty_debug.cpp  linux_utils.cpp  linux_utils.h  log.h  measurement.cpp  measurement.h  picoscope.cpp  picoscope.h  run_picoscope.cpp  timing.cpp  timing.h  trigger.cpp  trigger.h
project/src/analysis/: n-gamma.h
project/util/: bin2dat.cpp
sdk/: FINDME.txt
sdk/4000/: KernelDrivers.txt  PS4000.inc  PS4000.lib  PS4000con.c  PicoScope4000.llb  PicoScope4000ExampleBlock.vi  PicoScope4000ExampleRapidBlock.vi  PicoScope4000ExampleStreaming.vi  ReadMe.txt  picoStatus.h  ps4000.lib  ps4000.xls  ps4000Api.h  ps4000Wrapper.def  ps4000bc.lib  ps4000wrap.c
sdk/4000/C# Example/: PS4000ConsoleExample.cs  PS4000Imports.cs  PS4000PinnedArray.cs  ps4000example.csproj  ps4000example.sln
sdk/4000/Excel/: ps4000.xls
sdk/4000/Labview/: PicoScope4000.llb  PicoScope4000ExampleBlock.vi  PicoScope4000ExampleRapidBlock.vi  PicoScope4000ExampleStreaming.vi
sdk/4000/PS4000VbNetCon/: PS4000.vb  PS4000VbNetCon.vbproj  VBNetConsole.sln
sdk/4000/Wrapper/: ps4000Wrap.h  ps4000wrap.c  ps4000wrap.def  ps4000wrap.sln  ps4000wrap.vcproj  ps4000wrap.vcxproj  resource.rc
sdk/4000/picopp/: USBreadme.txt  picopp.cat  picopp.inf  picopp.sys
sdk/4000/ps4000con/: PS4000con.c  ps4000con.sln  ps4000con.vcproj  ps4000con.vcxproj
sdk/4000/system/: SystemDrivers.txt
sdk/4000/x64/: PS4000.lib
sdk/6000/: KernelDrivers.txt  PS6000.lib  PS6000con.c  PicoScope6000.llb  PicoScope6000ExampleBlock.vi  PicoScope6000ExampleRapidBlock.vi  PicoScope6000ExampleStreaming.vi  ReadMe.txt  ps6000.xls  ps6000Api.h  ps6000wrap.c  ps6000wrap.def
sdk/6000/C console/: PS6000con.c  ps6000con.sln  ps6000con.vcxproj
sdk/6000/C# console/: PS6000ConsoleExample.cs  PS6000Imports.cs  PS6000PinnedArray.cs  ps6000CSCon.sln  ps6000Con.csproj  ps6000Con.sln
sdk/6000/Excel/: ps6000.xls
sdk/6000/Labview/: PicoScope6000.llb  PicoScope6000ExampleBlock.vi  PicoScope6000ExampleRapidBlock.vi  PicoScope6000ExampleRapidBlockBulk.vi  (+1 more)
sdk/6000/x64/: PS6000.lib
(+34 files in other folders)
